--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ celerybeat.pid
 .env
 .venv
 env/
+vpt
 venv/
 ENV/
 env.bak/
@@ -127,3 +128,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+.vscode/
+data/
+out/
+big_transfer/
+BiT-M-R50x1.npz
+wandb/
